--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 body {
-  background-color: blue;
+  background-color: black;
+  color: white;
+  font-family: sans-serif, serif;
+  font-weight: 800;
 }
 
 #root {
