--- a/src/Cards.css
+++ b/src/Cards.css
@@ -7,10 +7,10 @@
 .card {
   height: 175px;
   width: 175px;
-  background-color: white;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 5px solid black;
-  border-radius: 8px;
+  border-radius: 2px;
+  cursor: pointer;
 }
