--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-body {
-  background-color: black;
-  color: white;
-  font-family: sans-serif, serif;
-  font-weight: 800;
+* {
+  margin: 0;
 }
 
-#root {
-  width: 1600px;
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
